samples/_failures_safe/1761705901_6c8437_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9b170d0.c: In function ‘main’:
./samples/SAFE/__tmp_e9b170d0.c:200:5: error: expected expression at end of input
  200 |     int token_count =
      |     ^~~
./samples/SAFE/__tmp_e9b170d0.c:200:5: error: expected declaration or statement at end of input
